--- a/letter.html
+++ b/letter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carta para Joaninha</title>
+    <title>Denovo Finalistas</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -30,13 +30,27 @@
             <!-- Carta -->
             <div class="letter">
                 <div class="letter-content">
-                    <p class="paragraph">Querida Joaninha,</p>
-                    <p class="paragraph">Escrevo esta carta com o coração cheio de gratidão e carinho. Nossa amizade é um presente que guardo com muito carinho, e cada momento que compartilhamos é uma lembrança preciosa.</p>
-                    <p class="paragraph">Você é uma pessoa incrível, com um coração enorme e uma capacidade única de fazer as pessoas ao seu redor se sentirem especiais. Sua presença ilumina qualquer ambiente, e sua amizade é um verdadeiro tesouro.</p>
-                    <p class="paragraph">Lembro-me de todos os momentos que passamos juntos, das risadas, das conversas, das aventuras. Cada um deles é uma parte importante da minha história, e sou muito grato por ter você como amiga.</p>
-                    <p class="paragraph">Que esta carta seja um pequeno gesto do quanto você é importante para mim. Que possamos continuar criando memórias juntos e fortalecendo ainda mais nossa amizade.</p>
-                    <p class="paragraph">Com todo meu carinho e gratidão,</p>
-                    <p class="signature">Gabriel</p>
+                    <p class="paragraph">Bem, não sei como começar isto, mas tenho de ser curto, então acho que, ao fim de tantos anos, digo por mais uma vez: obrigado. Obrigado por seres quem és, obrigado por apoiares, e obrigado por tudo e mais um pouco.</p>
+                    <p class="paragraph">Palavras não vão ser suficientes para falar de tudo, mas sabes que tens um lugar guardado no meu coração, não importa se estamos chateados ou felizes um com o outro.</p>
+                    <p class="paragraph">Em pouco tempo instauraste-te na minha vida, e não quero que saias dela. Foste tu que estiveste lá nos meus pontos altos e baixos, tanto nos momentos de glória em palco (ou de não tanta glória), como nos de tristeza, onde me aturaste por WhatsApp em mensagens que escrevi a chorar — e as tuas palavras foram o meu reconforto.</p>
+                    <p class="paragraph">Foste a rapariga que mais esteve lá para mim quando precisei, mesmo em momentos em que não tinha mais ninguém. Tu estiveste lá, como naquele meu concerto de Natal, onde mais ninguém ia — mas, mesmo assim, tu arrastaste a tua mãe e fizeste questão de estar presente (obrigado, Cátia ❤️).</p>
+                    <p class="paragraph">Bem, ao fim de anos, vamos começar a seguir caminhos diferentes, em lugares diferentes, e sei que nos vamos afastar um pouco, pois já não te vou ver todas as semanas. Mas sei que, quando precisar de ti, estás a uma mensagem de distância — e tu sabes o mesmo.</p>
+                    <p class="paragraph">Para sempre vou pensar em ti quando ouvir Sweet Child e muitos outros bangers que sempre cantámos juntos.</p>
+                    <p class="paragraph">Em alguns momentos, senti que a nossa amizade podia partir-se ao meio, mas vi que, se não parou quando o nosso grupo se separou todo, ou mesmo quando, pela primeira vez, tive coragem de dizer a alguém o que sentia dela…</p>
+                    <p class="paragraph">Algo que se calhar já reparaste é que não sou pessoa de falar muito do que sinto, mas nós chegámos a um ponto de amizade em que eu disse: "Fuck it, quero ultrapassar isto. Se for desilusão, é mais uma", apesar de saber que aquela seria a maior de todas…</p>
+                    <p class="paragraph">Sempre foste a rapariga de quem eu mais gostei, porque, sinceramente, somos quase idênticos de personalidade… e mesmo nas diferenças, vejo os bons momentos, em que me vejo feliz.</p>
+                    <p class="paragraph">És uma pessoa incrível, com um enorme coração e uma personalidade completa, ao contrário de muita gente. Nunca achei ninguém que conseguisse equiparar.</p>
+                    <p class="paragraph">Sempre foste um símbolo de resiliência para mim, pois sempre me apoiaste a insistir e a perseguir as minhas paixões. E quero que tu sigas as tuas. Eu apoiando ou não, sabes que vou estar cá para ti, nos bons e nos maus momentos, para equiparar ao que fizeste por mim até agora.</p>
+                    <p class="paragraph">Por ti já derramei lágrimas e sorrisos, mas isso só fez com que o quanto eu gosto de ti seja mais forte, porque uma tempestade derruba uma parede, mas não uma muralha.</p>
+                    <p class="paragraph">Sempre foste a rapariga que eu idealizei. E quando me abri contigo, disseste que não querias que o resultado fosse uma amizade desperdiçada por uma mera diferença de interesses.</p>
+                    <p class="paragraph">Naquele momento, apercebi-me de algo que levo para a vida como um lema, e esse foi o lema que me fez persistir nesta amizade:<br>"Mais vale ter pouco de muito do que ter muito de nada."</p>
+                    <p class="paragraph">Quero levar-te no meu coração para todo o sempre, e mesmo que por um tempo saias, sabes que tens sempre o teu lugar guardado, para sempre.</p>
+                    <p class="paragraph">Nós rimos muito, e mesmo discutindo um pouco, eu nunca esqueço o porquê de querer continuar.</p>
+                    <p class="paragraph">O motivo principal de ter tido tanta dificuldade a escrever isto foi porque não queria repetir muito o que já te disse noutros momentos, mas apercebi-me de que escrevia o que sentia — e, felizmente, esses sentimentos nunca mudaram e nunca mudarão.</p>
+                    <p class="paragraph">Por isso, por mais que queira ser diferente, digo o mesmo, porque escrevo de coração.</p>
+                    <p class="paragraph">Então, digo por mais uma vez:</p>
+                    <p class="paragraph">Obrigado por tudo, Joana.</p>
+                    <p class="signature">– Do teu amigo, Gabriel</p>
                 </div>
                 <button class="back-button">Voltar</button>
             </div>
@@ -63,8 +77,11 @@
         <div class="gallery-item">
             <img src="6.jpeg" alt="Imagem 6">
         </div>
-        <p class="centered-message">Precisamos tirar mais fotos!!</p>
+        <div class="gallery-item">
+            <img src="7.png" alt="Imagem 7">
+        </div>
         <p class="centered-message">Foi o Melhor que arranjei</p>
+
 
     </div>
     <button class="back-button">Voltar</button>
